Replaced top-eyelid and bottom-eyelid SVGs with DIVs.

--- a/day-069/index.html
+++ b/day-069/index.html
@@ -12,15 +12,11 @@
 <body>
 	<div class="frame">
 		<div class="center">
-			<svg class="top-eyelid" width="240px" height="106px" viewBox="0 0 240 106">
-				<path d="M239.461093,106 L240,106 L240,0 L0,0 L0,106 L0.538906982,106 C5.9904782,95.5378089 52.3717687,81 120,81 C187.628231,81 234.009522,95.5378089 239.461093,106 Z" class="lid"></path>  
-			</svg>
+			<div class="top-eyelid"></div>
 			<div class="eye">
 				<div class="iris"></div>
 			</div>
-			<svg class="bottom-eyelid" width="240px" height="106px" viewBox="0 0 240 106">
-				<path d="M239.461093,106 L240,106 L240,0 L0,0 L0,106 L0.538906982,106 C5.9904782,95.5378089 52.3717687,81 120,81 C187.628231,81 234.009522,95.5378089 239.461093,106 Z" class="lid"></path>  
-			</svg>
+			<div class="bottom-eyelid"></div>
 		</div>
 	</div>
 </body>
